Added main activity (wizard)
git-svn-id: http://notifications-widget.googlecode.com/svn/trunk@31 21922344-3934-ee51-d6e3-fd981ce84c01